fix: activity feed card header alignment (#14580)
* fix feed-card header alignment issue by revert back the using 2 UserPopOverCard code and fix some css

* fix role button on span tag issue

* replace span and onClick with the Link

* make the whole feed header text as paragraph

* fix: Header in ActivityFeedCard component

* fix a style issue

* update unit test of feed-card-header

---------

--- a/openmetadata-ui/src/main/resources/ui/src/components/MyData/RightSidebar/announcements-widget.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/MyData/RightSidebar/announcements-widget.less
@@ -20,8 +20,5 @@
     overflow-y: scroll;
     overflow-x: hidden;
     max-height: 90%;
-    .feed-card-body {
-      padding: 0;
-    }
   }
 }
